# zubi

./: .env.example  .gitignore  APPS_PRONTOS.md  BUILD_FINAL.md  BUILD_LOCAL.md  BUILD_STATUS.md  CI_CD_GUIDE.md  CI_CD_SETUP.md  Cargo.toml  DEVELOPMENT.md  FIRST_UPLOAD.md  LICENSE  NOSTR_RIDE_SYSTEM.md  Protocolo de Mobilidade Cooperativa Descentralizada (PMCD).txt  QUICKSTART_AUTOMATION.md  README.md  SETUP_EXPO_TOKEN.md  SETUP_SERVICE_ACCOUNT.md  SYSTEM_COMPLETE.md  TODO.md  hardhat.config.js  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: eas-build-driver.yml  eas-build-passenger.yml
contracts/: README.md  ZubiEscrow.sol
driver-app/: App.js  app.json  build-output.txt  eas.json  init-output.txt  metro.config.js  package-lock.json  package.json
driver-app/android/: settings.gradle
driver-app/shared/: ChatService.js
passenger-app/: App.full.js  App.js  App.minimal.js  app.json  eas.json  package-lock.json  package.json
passenger-app/android/: settings.gradle
scripts/: build-and-submit.sh  build-incremental.sh  build-light.sh  deploy-contract.js  increment-version.js
shared/: ChatService.js
shared/components/: ChatComponent.js  OSMMapView.js  OSMMapWeb.js
shared/config/: PaymentConfig.js
shared/contexts/: AppContext.js
shared/services/: AuthService.js  CreditCardService.js  DiagnosticService.js  GovernanceService.js  KeyManagementService.js  (+9 more)
test/: ZubiEscrow.test.js
zubi_core/: Cargo.toml
zubi_core/src/: lib.rs
zubi_driver/: Cargo.toml
zubi_driver/src/: app.rs  main.rs
zubi_passenger/: Cargo.toml
(+31 files in other folders)
