[package]
name = "zubi_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10" # Para hashing criptográfico (Proof of Presence)
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
# Futuro:
# libp2p = "0.50"
# nostr-sdk = "0.23"
# ethers = "2.0"
