[package]
name = "zubi_driver"
version = "0.1.0"
edition = "2021"

[lib]
name = "zubi_driver"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
zubi_core = { path = "../zubi_core" }
makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "master" }

[target.aarch64-linux-android.dependencies]

# Workaround para problemas de linkagem no Windows
[profile.release]
panic = "abort"
lto = false
